src/test/resources/errors/print_types_error.mc
int main() {
  printInt("hola");     // error: espera int
  printChar("a");       // error: espera char/int
  printString(123);     // error: espera string
  return 0;
}
